添加 updateTopicRouteInfoFromNameServer的简单分析

--- a/apache-rocketmq-test/pom.xml
+++ b/apache-rocketmq-test/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>rocketmq-test</artifactId>
+    <artifactId>apache-rocketmq-test</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-client-java -->
