--- a/apache-rocketmq-test/pom.xml
+++ b/apache-rocketmq-test/pom.xml
@@ -31,6 +31,17 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
