增加消息生产消费源码分析

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ todo.md
 /grpc-proto/
 rocketmq-all-5.0.0-source-release/distribution/bin/bk.log
 rocketmq-all-5.0.0-source-release/distribution/bin/ns.log
+/user.txt
